// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caractérisation du handler > 01 dashboard 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <h1>Dashboard</h1>
    <p class="ska-subtitle">Welcome to your admin panel</p>
    <div class="ska-stats">
      <div class="ska-stat">
        <div class="ska-stat__icon">
          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"/><path d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"/><path d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"/></svg>
        </div>
        <div>
          <div class="ska-stat__value">3</div>
          <div class="ska-stat__label">Models</div>
        </div>
      </div>
      <div class="ska-stat">
        <div class="ska-stat__icon">
          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><ellipse cx="12" cy="5" rx="9" ry="3"/><path d="M3 5V19A9 3 0 0 0 21 19V5"/><path d="M3 12A9 3 0 0 0 21 12"/></svg>
        </div>
        <div>
          <div class="ska-stat__value">26</div>
          <div class="ska-stat__label">Total Records</div>
        </div>
      </div>
    </div>
    <h2>Models</h2>
    <div class="ska-models">
        <a href="/admin/user" class="ska-model-card">
          <div>
            <div class="ska-model-card__name">Utilisateurs</div>
            <div class="ska-model-card__count">25 records</div>
          </div>
          <div class="ska-model-card__footer">Manage →</div>
        </a>
        <a href="/admin/post" class="ska-model-card">
          <div>
            <div class="ska-model-card__name">Post</div>
            <div class="ska-model-card__count">1 records</div>
          </div>
          <div class="ska-model-card__footer">Manage →</div>
        </a>
        <a href="/admin/category" class="ska-model-card">
          <div>
            <div class="ska-model-card__name">Category</div>
            <div class="ska-model-card__count">0 records</div>
          </div>
          <div class="ska-model-card__footer">Manage →</div>
        </a>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 02 dashboard avec slash final 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <h1>Dashboard</h1>
    <p class="ska-subtitle">Welcome to your admin panel</p>
    <div class="ska-stats">
      <div class="ska-stat">
        <div class="ska-stat__icon">
          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"/><path d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"/><path d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"/></svg>
        </div>
        <div>
          <div class="ska-stat__value">3</div>
          <div class="ska-stat__label">Models</div>
        </div>
      </div>
      <div class="ska-stat">
        <div class="ska-stat__icon">
          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><ellipse cx="12" cy="5" rx="9" ry="3"/><path d="M3 5V19A9 3 0 0 0 21 19V5"/><path d="M3 12A9 3 0 0 0 21 12"/></svg>
        </div>
        <div>
          <div class="ska-stat__value">26</div>
          <div class="ska-stat__label">Total Records</div>
        </div>
      </div>
    </div>
    <h2>Models</h2>
    <div class="ska-models">
        <a href="/admin/user" class="ska-model-card">
          <div>
            <div class="ska-model-card__name">Utilisateurs</div>
            <div class="ska-model-card__count">25 records</div>
          </div>
          <div class="ska-model-card__footer">Manage →</div>
        </a>
        <a href="/admin/post" class="ska-model-card">
          <div>
            <div class="ska-model-card__name">Post</div>
            <div class="ska-model-card__count">1 records</div>
          </div>
          <div class="ska-model-card__footer">Manage →</div>
        </a>
        <a href="/admin/category" class="ska-model-card">
          <div>
            <div class="ska-model-card__name">Category</div>
            <div class="ska-model-card__count">0 records</div>
          </div>
          <div class="ska-model-card__footer">Manage →</div>
        </a>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 03 liste page 1 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <div class="ska-header">
      <div>
        <h1>Utilisateurs</h1>
        <p class="ska-subtitle">25 records</p>
      </div>
      <a href="/admin/user/new" class="ska-btn ska-btn--primary">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
        Add Utilisateurs
      </a>
    </div>
    <div class="ska-card">
      <div class="ska-table-wrap">
        <table class="ska-table">
          <thead>
            <tr>
              <th>id</th><th>email</th><th>name</th><th>bio</th><th>role</th><th>is Active</th>
              <th>Actions</th>
            </tr>
          </thead>
          <tbody>
              <tr>
                <td>1</td><td>user1@example.com</td><td>User 1</td><td>Long bio with an apostrophe: o&#39;brien</td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/1" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/1" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>2</td><td>user2@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/2" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/2" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>3</td><td>user3@example.com</td><td>User 3</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/3" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/3" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>4</td><td>user4@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/4" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/4" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>5</td><td>user5@example.com</td><td>User 5</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/5" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/5" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>6</td><td>user6@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/6" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/6" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>7</td><td>user7@example.com</td><td>User 7</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/7" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/7" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>8</td><td>user8@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/8" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/8" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>9</td><td>user9@example.com</td><td>User 9</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/9" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/9" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>10</td><td>user10@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/10" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/10" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>11</td><td>user11@example.com</td><td>User 11</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/11" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/11" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>12</td><td>user12@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/12" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/12" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>13</td><td>user13@example.com</td><td>User 13</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/13" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/13" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>14</td><td>user14@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/14" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/14" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>15</td><td>user15@example.com</td><td>User 15</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/15" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/15" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>16</td><td>user16@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/16" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/16" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>17</td><td>user17@example.com</td><td>User 17</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/17" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/17" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>18</td><td>user18@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/18" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/18" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>19</td><td>user19@example.com</td><td>User 19</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/19" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/19" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>20</td><td>user20@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/20" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/20" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
          </tbody>
        </table>
      </div>
        <div class="ska-pagination">
          <span class="ska-pagination__info">
            Showing 1 to 20 of 25
          </span>
          <a href="?page=2" class="ska-btn ska-btn--secondary ska-btn--sm">Next</a>
        </div>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 04 liste page 2 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <div class="ska-header">
      <div>
        <h1>Utilisateurs</h1>
        <p class="ska-subtitle">25 records</p>
      </div>
      <a href="/admin/user/new" class="ska-btn ska-btn--primary">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
        Add Utilisateurs
      </a>
    </div>
    <div class="ska-card">
      <div class="ska-table-wrap">
        <table class="ska-table">
          <thead>
            <tr>
              <th>id</th><th>email</th><th>name</th><th>bio</th><th>role</th><th>is Active</th>
              <th>Actions</th>
            </tr>
          </thead>
          <tbody>
              <tr>
                <td>21</td><td>user21@example.com</td><td>User 21</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/21" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/21" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>22</td><td>user22@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/22" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/22" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>23</td><td>user23@example.com</td><td>User 23</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/23" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/23" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>24</td><td>user24@example.com</td><td><span style="color:#94a3b8">—</span></td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/24" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/24" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>25</td><td>user25@example.com</td><td>User 25</td><td><span style="color:#94a3b8">—</span></td><td>USER</td><td>✓</td>
                <td class="ska-table__actions">
                  <a href="/admin/user/25" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/25" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
          </tbody>
        </table>
      </div>
        <div class="ska-pagination">
          <span class="ska-pagination__info">
            Showing 21 to 25 of 25
          </span>
          <a href="?page=1" class="ska-btn ska-btn--secondary ska-btn--sm">Previous</a>
        </div>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 05 liste vide 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <div class="ska-header">
      <div>
        <h1>Category</h1>
        <p class="ska-subtitle">0 records</p>
      </div>
      <a href="/admin/category/new" class="ska-btn ska-btn--primary">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
        Add Category
      </a>
    </div>
    <div class="ska-card">
      <div class="ska-table-wrap">
        <table class="ska-table">
          <thead>
            <tr>
              <th>slug</th><th>name</th><th>description</th>
              <th>Actions</th>
            </tr>
          </thead>
          <tbody>
              <tr><td colspan="4" style="text-align: center; color: #64748b; padding: 2rem;">No records found</td></tr>
          </tbody>
        </table>
      </div>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 06 formulaire de création 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <a href="/admin/user" class="ska-back">← Back to list</a>
    <h1>Create Utilisateurs</h1>
    <div class="ska-card">
      <form method="POST" class="ska-form">
        <input type="hidden" name="_action" value="create">
    <div class="ska-field">
      <label class="ska-label">email *</label>
      <input type="text" name="email" value="" class="ska-input"  required>
    </div>
    <div class="ska-field">
      <label class="ska-label">name</label>
      <input type="text" name="name" value="" class="ska-input"  >
    </div>
      <div class="ska-field">
        <label class="ska-label">bio</label>
        <textarea name="bio" class="ska-input" rows="4"  ></textarea>
      </div>
    <div class="ska-field">
      <label class="ska-label">rating</label>
      <input type="number" name="rating" value="" class="ska-input"  >
    </div>
        <div class="ska-field">
          <label class="ska-label">metadata</label>
          <textarea name="metadata" class="ska-input" rows="4"  ></textarea>
        </div>
    <div class="ska-field">
      <label class="ska-label">avatar</label>
      <input type="text" name="avatar" value="" class="ska-input"  >
    </div>
        <div class="ska-form__actions">
          <button type="submit" class="ska-btn ska-btn--primary">Create</button>
          <a href="/admin/user" class="ska-btn ska-btn--secondary">Cancel</a>
        </div>
      </form>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 07 formulaire d’édition, PK Int 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <a href="/admin/user" class="ska-back">← Back to list</a>
    <h1>Edit Utilisateurs</h1>
    <p class="ska-subtitle">ID: 1</p>
    <div class="ska-card">
      <form method="POST" class="ska-form">
        <input type="hidden" name="_action" value="update">
    <div class="ska-field">
      <label class="ska-label">id</label>
      <input type="number" name="id" value="1" class="ska-input" readonly >
    </div>
    <div class="ska-field">
      <label class="ska-label">email *</label>
      <input type="text" name="email" value="user1@example.com" class="ska-input"  required>
    </div>
    <div class="ska-field">
      <label class="ska-label">name</label>
      <input type="text" name="name" value="User 1" class="ska-input"  >
    </div>
      <div class="ska-field">
        <label class="ska-label">bio</label>
        <textarea name="bio" class="ska-input" rows="4"  >Long bio with an apostrophe: o&#39;brien</textarea>
      </div>
    <div class="ska-field">
      <label class="ska-label">role</label>
      <input type="text" name="role" value="USER" class="ska-input"  >
    </div>
      <div class="ska-field">
        <label class="ska-checkbox-wrap">
          <input type="checkbox" name="isActive" class="ska-checkbox" checked >
          <span class="ska-label">is Active</span>
        </label>
      </div>
    <div class="ska-field">
      <label class="ska-label">balance</label>
      <input type="number" name="balance" value="10.50" class="ska-input"  >
    </div>
    <div class="ska-field">
      <label class="ska-label">visits</label>
      <input type="number" name="visits" value="3" class="ska-input"  >
    </div>
    <div class="ska-field">
      <label class="ska-label">rating</label>
      <input type="number" name="rating" value="4.5" class="ska-input"  >
    </div>
        <div class="ska-field">
          <label class="ska-label">metadata</label>
          <textarea name="metadata" class="ska-input" rows="4"  >{
  &quot;theme&quot;: &quot;dark&quot;
}</textarea>
        </div>
    <div class="ska-field">
      <label class="ska-label">avatar</label>
      <input type="text" name="avatar" value="" class="ska-input"  >
    </div>
    <div class="ska-field">
      <label class="ska-label">created At</label>
      <input type="datetime-local" name="createdAt" value="2026-01-15T10:30" class="ska-input" readonly >
    </div>
    <div class="ska-field">
      <label class="ska-label">updated At</label>
      <input type="datetime-local" name="updatedAt" value="2026-02-20T08:00" class="ska-input" readonly >
    </div>
        <div class="ska-form__actions">
          <button type="submit" class="ska-btn ska-btn--primary">Save Changes</button>
          <a href="/admin/user" class="ska-btn ska-btn--secondary">Cancel</a>
        </div>
      </form>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 08 formulaire d’édition, PK String 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <a href="/admin/post" class="ska-back">← Back to list</a>
    <h1>Edit Post</h1>
    <p class="ska-subtitle">ID: ckpost1</p>
    <div class="ska-card">
      <form method="POST" class="ska-form">
        <input type="hidden" name="_action" value="update">
    <div class="ska-field">
      <label class="ska-label">id</label>
      <input type="text" name="id" value="ckpost1" class="ska-input" readonly >
    </div>
    <div class="ska-field">
      <label class="ska-label">title *</label>
      <input type="text" name="title" value="Hello" class="ska-input"  required>
    </div>
      <div class="ska-field">
        <label class="ska-label">content</label>
        <textarea name="content" class="ska-input" rows="4"  ></textarea>
      </div>
      <div class="ska-field">
        <label class="ska-checkbox-wrap">
          <input type="checkbox" name="published" class="ska-checkbox" checked >
          <span class="ska-label">published</span>
        </label>
      </div>
    <div class="ska-field">
      <label class="ska-label">published At</label>
      <input type="datetime-local" name="publishedAt" value="" class="ska-input"  >
    </div>
    <div class="ska-field">
      <label class="ska-label">author Id *</label>
      <input type="number" name="authorId" value="1" class="ska-input"  required>
    </div>
        <div class="ska-form__actions">
          <button type="submit" class="ska-btn ska-btn--primary">Save Changes</button>
          <a href="/admin/post" class="ska-btn ska-btn--secondary">Cancel</a>
        </div>
      </form>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 09 modèle inconnu 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
      <!--[--><h1>Not Found</h1> <p class="ska-subtitle">Model "nope" not found</p> <a href="/admin" class="ska-btn ska-btn--secondary">← Back to Dashboard</a><!--]-->
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 10 id inexistant 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
      <!--[--><h1>Not Found</h1> <p class="ska-subtitle">User with ID "999" not found</p> <a href="/admin" class="ska-btn ska-btn--secondary">← Back to Dashboard</a><!--]-->
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 11 création POST redirige 1`] = `
{
  "location": "/admin/user",
  "status": 303,
}
`;

exports[`caractérisation du handler > 12 mise à jour POST redirige 1`] = `
{
  "location": "/admin/user",
  "status": 303,
}
`;

exports[`caractérisation du handler > 13 suppression POST redirige 1`] = `
{
  "location": "/admin/user",
  "status": 303,
}
`;

exports[`caractérisation du handler > 14 erreur prisma rendue en alerte 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
      <div class="ska-alert ska-alert--error">Error: DB is down &lt;b&gt;</div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 15 auth refusée 1`] = `
{
  "body": "Unauthorized",
  "status": 401,
}
`;

exports[`caractérisation du handler > 16 liste avec une colonne date 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Test Admin</title>
  <style>
    :root {
      --ska-primary: #ff0055;
      --ska-primary-hover: #d9002f;
    }/* stripped: static CSS, see note */</style>
</head>
<body>
  <div class="ska-layout">
    <aside class="ska-sidebar">
      <a href="/admin" class="ska-logo">Test Admin</a>
      <nav>
        <ul class="ska-nav">
          <li class="ska-nav__item">
            <a href="/admin" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/></svg>
              Dashboard
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/user" class="ska-nav__link ska-nav__link--active">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Utilisateurs
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/post" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Post
            </a>
          </li>
          <li class="ska-nav__item">
            <a href="/admin/category" class="ska-nav__link ">
              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>
              Category
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <main class="ska-main">
    <div class="ska-header">
      <div>
        <h1>Utilisateurs</h1>
        <p class="ska-subtitle">25 records</p>
      </div>
      <a href="/admin/user/new" class="ska-btn ska-btn--primary">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
        Add Utilisateurs
      </a>
    </div>
    <div class="ska-card">
      <div class="ska-table-wrap">
        <table class="ska-table">
          <thead>
            <tr>
              <th>email</th><th>created At</th>
              <th>Actions</th>
            </tr>
          </thead>
          <tbody>
              <tr>
                <td>user1@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/1" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/1" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user2@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/2" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/2" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user3@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/3" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/3" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user4@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/4" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/4" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user5@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/5" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/5" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user6@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/6" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/6" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user7@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/7" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/7" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user8@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/8" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/8" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user9@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/9" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/9" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user10@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/10" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/10" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user11@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/11" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/11" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user12@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/12" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/12" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user13@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/13" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/13" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user14@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/14" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/14" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user15@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/15" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/15" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user16@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/16" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/16" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user17@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/17" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/17" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user18@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/18" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/18" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user19@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/19" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/19" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
              <tr>
                <td>user20@example.com</td><td><DATE></td>
                <td class="ska-table__actions">
                  <a href="/admin/user/20" class="ska-btn ska-btn--secondary ska-btn--sm">Edit</a>
                  <form method="POST" action="/admin/user/20" style="display:inline" onsubmit="return confirm('Delete this item?')">
                    <input type="hidden" name="_action" value="delete">
                    <button type="submit" class="ska-btn ska-btn--danger ska-btn--sm">Delete</button>
                  </form>
                </td>
              </tr>
          </tbody>
        </table>
      </div>
        <div class="ska-pagination">
          <span class="ska-pagination__info">
            Showing 1 to 20 of 25
          </span>
          <a href="?page=2" class="ska-btn ska-btn--secondary ska-btn--sm">Next</a>
        </div>
    </div>
    </main>
  </div>
</body>
</html>"
`;

exports[`caractérisation du handler > 17 hors basePath délègue à resolve 1`] = `
{
  "body": "resolved-by-sveltekit",
  "resolveCalled": true,
}
`;
